EEVEE viewport isn't updating when adding or connecting new nodes to a material. #78520

Closed
opened 2020-07-02 05:52:44 +02:00 by michael campbell · 24 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-01 20:17, hash: 52b125a790
Worked: (newest version of Blender that worked as expected)

Short description of error
EEVEE viewport isn't updating when adding or connecting new nodes to a material.

Exact steps for others to reproduce the error
open a new file, add a material to suzanne, turn on eevee viewport, add some nodes. Objects turn white but don't refresh unless you change a parameter or change the frame (or stop and restart if animation is already playing). Sometimes changing a parameter during correct display will cause the objects to display as white until changing the frame.

Edit, i've just noticed it's randomly doing it during playback even if i'm doing nothing in blender (just playing in the background).

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-01 20:17, hash: `52b125a790` Worked: (newest version of Blender that worked as expected) **Short description of error** EEVEE viewport isn't updating when adding or connecting new nodes to a material. **Exact steps for others to reproduce the error** open a new file, add a material to suzanne, turn on eevee viewport, add some nodes. Objects turn white but don't refresh unless you change a parameter or change the frame (or stop and restart if animation is already playing). Sometimes changing a parameter during correct display will cause the objects to display as white until changing the frame. Edit, i've just noticed it's randomly doing it during playback even if i'm doing nothing in blender (just playing in the background).

Added subscriber: @3di

Added subscriber: @3di

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I cannot reproduce this with either the latest stable or current development versions of Blender:

Please try the latest daily build: https://builder.blender.org/download/

Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue.

If the problem persists, please give us more clear instructions on how to reproduce it from scratch.

I cannot reproduce this with either the latest stable or current development versions of Blender: Please try the latest daily build: https://builder.blender.org/download/ Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue. If the problem persists, please give us more clear instructions on how to reproduce it from scratch.

Added subscriber: @smramsay

Added subscriber: @smramsay

I'm having this problem as well.
Unfortunately, replicating it seems a bit random, but the problem is still easy to run into.

Initially I recorded a video (which I can upload if needed), but these are the steps in it:

  • Load Factory Settings
  • Switch to Shading workspace
  • In node editor, add Noise Texture
  • Connect Noise Texture's factor to Principled BSDFs base color (works as intended)
  • Increase Principled BSDF metallic to 1.0 (works as intended)
  • Add Gradient Texture
  • Connect Gradient Texture color to Principled BSDF color (viewport fails to update)
  • Move 3D viewport to update.
  • In node editor, add Voronoi Texture
  • Connect Voronoi Texture distance to Principled BSDF color (viewport fails to update)
  • Move 3D viewport to update.
  • Reduce Principled BSDF metallic to 0.0 (viewport fails to update)

Again, replication seems random. After recording the video, I repeated the same steps and everything worked.
Right up until I added a Musgrave Texture, connected it, and the viewport again didn't update.

Linux / 2070 RTX
2.90.0, hash: 464aaf2701

I'm having this problem as well. Unfortunately, replicating it seems a bit random, but the problem is still easy to run into. Initially I recorded a video (which I can upload if needed), but these are the steps in it: - Load Factory Settings - Switch to Shading workspace - In node editor, add Noise Texture - Connect Noise Texture's factor to Principled BSDFs base color (works as intended) - Increase Principled BSDF metallic to 1.0 (works as intended) - Add Gradient Texture - Connect Gradient Texture color to Principled BSDF color (viewport fails to update) - Move 3D viewport to update. - In node editor, add Voronoi Texture - Connect Voronoi Texture distance to Principled BSDF color (viewport fails to update) - Move 3D viewport to update. - Reduce Principled BSDF metallic to 0.0 (viewport fails to update) Again, replication seems random. After recording the video, I repeated the same steps and everything worked. Right up until I added a Musgrave Texture, connected it, and the viewport again didn't update. Linux / 2070 RTX 2.90.0, hash: 464aaf27016f

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I have this as well.

System Information
Operating system: Linux-5.6.19-300.fc32.x86_64-x86_64-with-glibc2.29 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Not too familiar with how the shader compilation works, doing this once in a material seems to make it "ready" and even closing and restarting blender will not show this anymore.
(However, doing this on another build will make the glitch return)

@fclem: does this ring a bell?

Just start connecting the output of the texture nodes in this file:
#78520.blend

I have this as well. **System Information** Operating system: Linux-5.6.19-300.fc32.x86_64-x86_64-with-glibc2.29 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 Not too familiar with how the shader compilation works, doing this once in a material seems to make it "ready" and even closing and restarting blender will not show this anymore. (However, doing this on another build will make the glitch return) @fclem: does this ring a bell? Just start connecting the output of the texture nodes in this file: [#78520.blend](https://archive.blender.org/developer/F8675334/T78520.blend)

Added subscriber: @bent

Added subscriber: @bent

I've had this issue multiple times in the past few months aswell, but never reported it as I couldn't reproduce it reliably.

Windows 10 64bit
NVIDIA GeForce GTX 970

I've tried file @lichtwerk provided on the 2.83.1 Flatpak from Flathub on my notebook:

System Information
Operating system: Linux-5.7.7-1-MANJARO-x86_64-with-glibc2.29 64 Bits
Graphics card: Mesa Intel(R) UHD Graphics 620 (KBL GT2) Intel 4.6 (Core Profile) Mesa 20.0.5

and there the shader would eventually show up (5-7 seconds after connecting, no "recompiling shaders" message). After it had been connected once it would show up immidiately, even after restarting Blender. After rebooting the system, I had the feeling that it was a bit faster for the first time connecting, but I didn't measure it.

I've had this issue multiple times in the past few months aswell, but never reported it as I couldn't reproduce it reliably. Windows 10 64bit NVIDIA GeForce GTX 970 I've tried file @lichtwerk provided on the 2.83.1 Flatpak from Flathub on my notebook: **System Information** Operating system: Linux-5.7.7-1-MANJARO-x86_64-with-glibc2.29 64 Bits Graphics card: Mesa Intel(R) UHD Graphics 620 (KBL GT2) Intel 4.6 (Core Profile) Mesa 20.0.5 and there the shader would eventually show up (5-7 seconds after connecting, no "recompiling shaders" message). After it had been connected once it would show up immidiately, even after restarting Blender. After rebooting the system, I had the feeling that it was a bit faster for the first time connecting, but I didn't measure it.

I think the problem is, if it needs to recompile the shaders after a user change to the node tree, then the viewport isnt refreshed until a value is changed, the viewport is moved, or the frame is changed.

I think the problem is, if it needs to recompile the shaders after a user change to the node tree, then the viewport isnt refreshed until a value is changed, the viewport is moved, or the frame is changed.
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

77fdd189e4
Is the bug there before this commit ? The patch seems renderer agnostic, and texture node specific.

77fdd189e4 Is the bug there before this commit ? The patch seems renderer agnostic, and texture node specific.

Added subscriber: @intracube

Added subscriber: @intracube

I've also had this for a long time. Sometimes moving/panning the viewport is enough to trigger a refresh, but other times a node will need to be disconnected/reconnected to force an update.

It's somewhat random but frequent enough that it must be a known issue (occurs multiple times within a few minutes use).

Possibly as a separate issue; there's sometimes a delay of several seconds even with simple shader trees before the viewport updates.

System Information
Operating system: SUSE Leap 15.1
Graphics card: NVidia RTX 2070 Super (official drivers) (440.82, 2020-04-05)

I've also had this for a long time. Sometimes moving/panning the viewport is enough to trigger a refresh, but other times a node will need to be disconnected/reconnected to force an update. It's somewhat random but frequent enough that it must be a known issue (occurs multiple times within a few minutes use). Possibly as a separate issue; there's sometimes a delay of several seconds even with simple shader trees before the viewport updates. **System Information** Operating system: SUSE Leap 15.1 Graphics card: NVidia RTX 2070 Super (official drivers) (440.82, 2020-04-05)

Can any of you still reproduce it with recent build? It seems I cannot.

Can any of you still reproduce it with recent build? It seems I cannot.

I still can with the latest from builder.blender.org
Hash: deb76548c1

I still can with the latest from builder.blender.org Hash: deb76548c108

This issue was referenced by 574bd866c8

This issue was referenced by 574bd866c867ba0e63365c2fa59e4490295990bc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-08-06 13:39:03 +02:00
Member

Was just writting:

I have this issue, but it doesn’t go away after moving the viewport to update the shader. Each time I have to move the viewport again.
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-05 13:59, hash: 2ca006f6c1

I can confirm that version: 2.91.0 Alpha, branch: master, commit date: 2020-08-06 11:39, hash: 690d61cf78, type: Release is fixed. Thanks @fclem!


Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35


Was just writting: >I have this issue, but it doesn’t go away after moving the viewport to update the shader. Each time I have to move the viewport again. >Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-05 13:59, hash: `2ca006f6c1` I can confirm that version: 2.91.0 Alpha, branch: master, commit date: 2020-08-06 11:39, hash: 690d61cf78cd, type: Release is fixed. Thanks @fclem! --- Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 ---

I can also confirm this seems fixed. Thanks!

I can also confirm this seems fixed. Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78520
No description provided.