Fix T78520 EEVEE: No viewport update when changing material nodetree

This was comming from rBd82c3d86155ea3c7831c7b5ef5d07bc8e2d99394